# rag_with_kubernetes

./: README.md  pyproject.toml
app/api/: main.py
app/api/v1/: dependencies.py
app/api/v1/endpoints/: chat.py  documents.py
app/api/v1/schemas/: chat_schemas.py  document_schemas.py
app/core/: config.py  embedding_manager.py  llm_client.py  rag_pipeline.py  vector_store_client.py
app/models/: db_models.py
app/services/: chat_service.py  document_service.py
venv_rag_with_kube/: pyvenv.cfg
venv_rag_with_kube/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
